[package]
name = "ensemble-mcmc"
version = "0.1.0"
edition = "2024"
description = "A generic stretch move ensemble MCMC sampler"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
log = "0.4.29"
rand = "0.10.1"
rand_pcg = "0.10.2"
rayon = "1.12.0"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
